updated content and fixed navbar issue on mobile screens

--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -265,7 +265,7 @@ p {
 }
 
 .custom-btn-2 {
-    width: 14rem;
+    width: 16.5rem;
     gap: 7px;
 }
 
@@ -280,7 +280,6 @@ p {
 }
 
 .contact-form-btn {
-    padding: 0.8rem 0.2rem 0.8rem 0.8rem;
     width: 9rem;
     gap: 3px;
 }
